syntax = "proto2";
package Test;

// 1
message Family
{
    required Identity identity = 1;
    repeated Person person = 2;
    optional string surname = 3;
}

// 1.1
message Identity
{
    required int32 id = 1;
    optional string postcode = 2;
    repeated string house = 3;
    optional int32 test_int32 = 4;
    optional int64 test_int64 = 5;
    optional bool test_bool = 6;
    optional double test_double = 7;
    optional string test_string = 8;
}

// 1.2
message Person
{
    required int32 id = 1;
    required string name = 2;
    repeated string email = 3;
    repeated Trade trade = 4;
    optional Valuable valuable = 5;
}

// 1.2.4
message Trade
{
    required string trade_name = 1;
    required int32 trade_value = 2;
}

// 1.2.5
message Valuable
{
    repeated Goods goods = 1;
}

// 1.2.5.1
message Goods
{
    required string goods_name = 1;
    required int32 goods_value = 2;
}


